adding changes to the javascript

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet"  href="./assets/css/style.css"/>
+    <title>Quiz</title>
 </head>
-<body>
 
+<body>
+    <class=header></class>
     <h1>Quiz</h1>
     <h3 id="time"></h3>
     <button id="btn">Start</button>
-    <div id="questions"></div>
-    <div id="showRight"></div>
+     <div id="questions"></div>
+     <div id="showRight"></div>
     <script src="./index.js"></script>
 </body>
+
 </html>
