--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <class=header></class>
     <h1>Quiz</h1>
+    <h2 id="scoreRes"></h2>
     <h3 id="time"></h3>
     <button id="btn">Start</button>
      <div id="questions"></div>
