adding changes to Javascript for storage

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <h1>Quiz</h1>
     <h2 id="scoreRes"></h2>
     <h3 id="time"></h3>
-    <button id="btn">Start</button>
+    <h4 id="message"></h4>
+    <div id="btn"></div>
      <div id="questions"></div>
+     <div id="input"></div>
      <div id="showRight"></div>
-    <script src="./index.js"></script>
+     <script src="./index.js"></script>
 </body>
 
 </html>
